# pvpgn-magic-builder

./: .gitattributes  .gitignore  LICENSE-MIT  README.md  build_d2gs.bat  build_pvpgn.bat  build_pvpgn_dev.bat  patch_pvpgn.bat  rebuild_total.bat  relations.vsd  test_arraymap.bat  test_autoupdate.bat  test_call.bat  test_call_vars.bat  test_call_vars.vbs  test_conf-replace.bat  test_md5list.bat  test_mkdir.bat  test_patch-apply.bat  test_patch-download.bat  test_sqlversion.bat  test_svn-patch.bat  test_vsvars.bat  version-history.txt  version-history.txt.txt
 pvpgn-magic-builder --username HarpyWar@gmail.com/: build_d2gs.bat  test_bat-vbs.bat  test_call.vbs  test_choice.bat  test_find-replace.bat  test_getfilefrompath.bat  test_iterate_dir.bat  test_sha1hash.bat  test_strreplace.bat  test_vars.bat  test_x64-x86.bat
 pvpgn-magic-builder --username HarpyWar@gmail.com/module/: i18n.inc.bat  select_generator.inc.bat
 pvpgn-magic-builder --username HarpyWar@gmail.com/module/autoupdate/: check_for_update.inc.bat  filelist.txt
 pvpgn-magic-builder --username HarpyWar@gmail.com/module/include/d2gs/: filelist.txt
 pvpgn-magic-builder --username HarpyWar@gmail.com/module/include/pvpgn-support-1.2/: IX86ver1.mpq  PMACver1.mpq  XMACver1.mpq  bnserver-D2XP.ini  bnserver-WAR3.ini  icons.bni  icons_STAR.bni  ver-ix86-1.mpq
 pvpgn-magic-builder --username HarpyWar@gmail.com/module/include/source_replace/: CMakeLists.txt
 pvpgn-magic-builder --username HarpyWar@gmail.com/module/include/source_replace/conf/: bnmotd-csCZ.txt.in  bnmotd-enUS.txt.in  bnmotd-plPL.txt.in  bnmotd-ruRU.txt.in  bnmotd-svSE.txt.in  bnmotd-zhTW.txt.in  d2cs.conf.in  d2dbs.conf.in
 pvpgn-magic-builder --username HarpyWar@gmail.com/module/include/source_replace/src/: CMakeLists.txt
 pvpgn-magic-builder --username HarpyWar@gmail.com/module/include/vsexpress_include/: afx.h  afxacceleratorkey.h  afxacceleratorkeyassignctrl.h  afxanimationcontroller.h  afxanimationhelper.h  afxautohidebutton.h  afxautohidedocksite.h  afxbasetabbedpane.h  afxbasetoolbar.h  afxbutton.h  afxcaptionbar.h  afxcmn.h  afxcmn.inl  afxcolorbutton.h  afxcolordialog.h  afxcolormenubutton.h  afxcolorpopupmenu.h  afxcolorpropertysheet.h  afxcomctl32.inl  afxcommandmanager.h  afxcontextmenumanager.h  afxcontrolbarimpl.h  afxcontrolbars.h  afxcontrolrenderer.h  afxcustomcolorspropertypage.h  afxcview.inl  afxdao.h  afxdao.inl  afxdesktopalertdialog.h  afxdesktopalertwnd.h  afxdhtml.h  afxdialogex.h  afxdockablepaneadapter.h  afxdockingmanager.h  afxdockingpanesrow.h  afxdocob.h  afxdragframeimpl.h  afxdropdowntoolbar.h  afxeditbrowsectrl.h  afxfontcombobox.h  (+83 more)
 pvpgn-magic-builder --username HarpyWar@gmail.com/module/tortoisesvn/: patch_source.inc.bat
module/: config.inc.bat  dbchoice.bat  dbchoice.inc.bat  i18n.bat  i18n.inc.bat  recursive_copy.inc.bat  replace.vbs  replace_line.vbs  select_branch.inc.bat  select_generator.inc.bat
module/autoupdate/: check_for_update.inc.bat  filelist.txt  test.md5  wget.vbs
module/i18n/: DEU.bat  ENU.bat  ESN.bat  NLD.bat  PLK.bat  RUS.bat  SRL.bat  UKR.bat
module/include/atlmfc/: ATLComMem.h  ATLComTime.h  ATLComTime.inl  afx.h  afxaccessibility.h  afxadv.h  afxanimationcontroller.h  afxanimationhelper.h  afxautohidebar.h  afxbasepane.h  afxbaseribbonelement.h  afxbasetabctrl.h  afxbutton.h  afxcmn.h  afxcmn.inl  afxcmn2.inl  afxcmn3.inl  afxcolorbutton.h  afxcomctl32.h  afxcommandmanager.h  afxcontrolbarutil.h  afxcontrolrenderer.h  afxctrlcontainer.h  afxdao.h  afxdatarecovery.h  afxdisp.h  afxdlgs.h  afxdockingmanager.h  afxeditbrowsectrl.h  afxext.h  afxfontcombobox.h  afxframeimpl.h  afxglobals.h  afxhtml.h  afxlinkctrl.h  afxmaskededit.h  afxmdichildwndex.h  afxmdiclientareawnd.h  afxmdiframewndex.h  afxmenubutton.h  (+118 more)
module/include/curl/7.74.0/: libcurl.lib
module/include/d2gs/: d2gs_install.bat  d2gs_uninstall.bat  filelist.txt
module/include/d2gs/1.09d/: d2gs.reg  filelist.txt  install.bat  readme.txt
module/include/d2gs/1.10/: D2GS_LICENSE_CN.TXT  D2GS_README.TXT  D2GS_README_CN.TXT  d2server.ini  filelist.txt
module/include/d2gs/1.11b/: D2GS_1.11b_Readme.txt  d2gs.reg  d2warden.ini  filelist.txt  install.bat
module/include/d2gs/1.12a/: D2GS_1.12a_Readme.txt  d2gs.reg  d2gs.script  d2server.ini  filelist.txt
module/include/d2gs/1.13c/: D2GS_1.13c_Readme.txt  D2GS_README.TXT  D2GS_README_CN.TXT  README.txt  d2gs.script  filelist.txt
module/include/d2gs/1.13c_m/: README.txt  d2gs.reg  d2warden.ini  filelist.txt  install.bat
module/include/d2gs/1.13d/: D2GS_1.13d_Readme.txt  d2gs.reg  d2gs.script  d2gs_x64.reg  d2server.ini  d2warden.ini  filelist.txt  install_x64.bat
module/include/pvpgn-support-1.2/: icons-WAR3.bni
module/include/source_replace/: ConfigureChecks.cmake
module/include/source_replace/src/bnetd/: CMakeLists.txt
module/include/vsexpress_include/: AfxThemeHelper.h  afxaccessibility.h  afxautohidebar.h  afxbasepane.h  afxbaseribbonelement.h  afxbasetabctrl.h  afxcaptionbutton.h  afxcaptionmenubutton.h  afxcmdusagecount.h  afxcmn2.inl  afxcmn3.inl  afxcolorbar.h  afxcolorpickerctrl.h  afxcontrolbarutil.h  afxctrlcontainer.h  afxcustomizebutton.h  afxcustomizemenubutton.h  afxcview.h  afxdatarecovery.h  afxdb.h  afxdb.inl  afxdb_.h  afxdialogimpl.h  afxdisp.h  afxdockablepane.h  afxdocksite.h  afxdrawmanager.h  afxdropdownlistbox.h  afxext.h  afxext.inl  afxframeimpl.h  afxframewndex.h  afxglobals.h  afxkeyboardmanager.h  afxlistctrl.h  afxmaskededit.h  afxmdiframewndex.h  afxmenubar.h  afxmenutearoffmanager.h  afxmousemanager.h  (+81 more)
module/tools/: exec_tool.bat  fetch_json.vbs  pvpgn_version.bat  recursive_copy.bat  replace_line.vbs  replacer.bat  wget.vbs
module/tortoisesvn/: patch_source.inc.bat
(+294 files in other folders)
